--- a/css/templatemo-style.css
+++ b/css/templatemo-style.css
@@ -3,8 +3,8 @@
 Journey Template 
 http://www.templatemo.com/tm-511-journey
 
-Primary color (light blue)  : #69c6ba
-Highlight color (pink)		: #c66995
+Primary color (light blue)  : #A8AE6A
+Highlight color (pink)		: #C57820
 --------------------------------------
 
 */
@@ -39,21 +39,21 @@ p:last-child { margin-bottom: 0; }
 .tm-text-gray { color: #787676; }
 
 .tm-text-highlight {
-    color: #c66995;
+    color: #C57820;
     font-weight: 600;
 }
 
-.tm-bg-primary { background: #69c6ba; }
-.tm-bg-highlight { background: #c66995; }
+.tm-bg-primary { background: #A8AE6A; }
+.tm-bg-highlight { background: #C57820; }
 
 .btn-primary {
-    background: #69c6ba;
+    background: #A8AE6A;
     border: none;
     border-radius: 0;
     outline: none;
 }
 
-.btn-primary:hover { background: #c66995; }
+.btn-primary:hover { background: #C57820; }
 .tm-top-bar .navbar-expand-lg .navbar-nav .nav-link { padding: 50px 35px; }
 
 .tm-top-bar {
@@ -77,11 +77,12 @@ p:last-child { margin-bottom: 0; }
 .tm-top-bar.active .navbar-brand { font-size: 1.4rem; }
 
 .tm-top-bar .navbar-brand img {
-    width: 60px;
+    width: 120px;
     height: auto;
+    margin-left: -10px
 }
 
-.tm-top-bar.active .navbar-brand img { width: 40px; }
+.tm-top-bar.active .navbar-brand img { width: 60px; }
 .tm-top-bar-bg { height: 119px; }
 .tm-top-bar a { color: black; }
 
@@ -97,7 +98,7 @@ p:last-child { margin-bottom: 0; }
     padding-bottom: 0;
 }
 
-.nav-link.active, .nav-link:hover {	color: #69c6ba;	}
+.nav-link.active, .nav-link:hover {	color: #A8AE6A;	}
 
 .navbar-toggler-icon {
     background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgb(104, 199, 187)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
@@ -144,7 +145,7 @@ p:last-child { margin-bottom: 0; }
 .tm-banner-row-header { text-align: center; }
 .tm-down-arrow-link { 
     color: white;
-    background-color: #69c6ba;
+    background-color: #A8AE6A;
     border-radius: 50%;
     padding: 10px 15px;
     margin-top: 0px;
@@ -154,7 +155,7 @@ p:last-child { margin-bottom: 0; }
 .tm-down-arrow-link:hover,
 .tm-down-arrow-link:focus {
     color: white;
-    background-color: #c66995;
+    background-color: #C57820;
 }
 
 /* Search form */
@@ -189,20 +190,20 @@ label { font-weight: 700; }
 }
 
 .tm-btn-white { background: white; }
-.tm-btn-white-primary { color: #69c6ba; }
-.tm-btn-white-highlight { color: #c66995; }
+.tm-btn-white-primary { color: #A8AE6A; }
+.tm-btn-white-highlight { color: #C57820; }
 
 .tm-btn-white-primary:hover,
 .tm-btn-white-primary:focus,
 .tm-btn-white-primary:active {
-    background: #c66995;
+    background: #C57820;
     color: white;
 }
 
 .tm-btn-white-highlight:hover,
 .tm-btn-white-highlight:focus,
 .tm-btn-white-highlight:active {
-    background: #69c6ba;
+    background: #A8AE6A;
     color: white;
 }
 
@@ -211,7 +212,7 @@ label { font-weight: 700; }
 .tm-btn-search:hover,
 .tm-btn-search:active,
 .tm-btn-search:focus {
-    background: #c66995;
+    background: #C57820;
 }
 
 .tm-bg-gray { background-color: #efefef; }
@@ -275,12 +276,12 @@ label { font-weight: 700; }
 
 .slick-prev:hover,
 .slick-next:hover {
-    background: #69c6ba;
+    background: #A8AE6A;
 }
 
 .tm-slideshow-highlight .slick-prev:hover, 
 .tm-slideshow-highlight .slick-next:hover {
-    background: #c66995;
+    background: #C57820;
 }
 
 .slick-prev {
@@ -315,7 +316,7 @@ label { font-weight: 700; }
     -webkit-justify-content: space-evenly;
     -ms-flex-pack: space-evenly;
     justify-content: space-evenly;
-    background: #69c6ba;
+    background: #A8AE6A;
 }
 
 .tm-tab-link {
@@ -358,7 +359,7 @@ label { font-weight: 700; }
 
 .tm-tab-link:hover,
 .tm-tab-link.active {
-    background: #c66995;
+    background: #C57820;
 }
 
 .tab-pane {
@@ -391,7 +392,7 @@ label { font-weight: 700; }
 }
 
 .tm-recommended-price-box {    
-    background-color: #69c6ba;
+    background-color: #A8AE6A;
     background-image: url(../img/button-curve.png);
     background-repeat: no-repeat;
     background-size: auto 100%;
@@ -418,7 +419,7 @@ label { font-weight: 700; }
     transition: all 0.3s ease;
 }
 
-.tm-recommended-price-box:hover { background-color: #c66995; }
+.tm-recommended-price-box:hover { background-color: #C57820; }
 
 .tm-recommended-price {
     color: white;
@@ -436,7 +437,7 @@ label { font-weight: 700; }
 .tm-d-table { display: table; }
 
 footer {
-    background: #69c6ba;
+    background: #3D342A;
     padding-top: 40px;
     padding-bottom: 40px;
     text-align: center;    
@@ -454,7 +455,7 @@ footer p { color: white; }
     font-weight: 600;
 }
 
-.tm-footer-text-highlight:hover { color: #c66995; }
+.tm-footer-text-highlight:hover { color: #C57820; }
 
 .tm-contact-form {
     background: white;
@@ -472,8 +473,8 @@ footer p { color: white; }
 }
 
 .form-control:focus {
-    border-color: #69c6ba;
-    box-shadow: 0 0 0 0.1rem #69c6babf;
+    border-color: #A8AE6A;
+    box-shadow: 0 0 0 0.1rem #A8AE6Abf;
 }
 
 .tm-name-container,
@@ -693,4 +694,17 @@ footer p { color: white; }
 
 p.custom-event {
 	font-size: 15px;
+}
+
+.titleHeader{
+    padding: 40px 20px 40px 60px;
+}
+
+.spacing{
+    letter-spacing: 5px;
+    font-weight: 100;
+}
+
+#landingPageLogo{
+    width: 20%;
 }
